--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2292,14 +2292,14 @@ footer {
   display: -ms-flexbox;
   display: flex;
   margin: 0 auto;
-  -ms-flex-pack: justify;
-      justify-content: space-between;
   -ms-flex-direction: column;
       flex-direction: column;
   max-width: 480px;
   background-image: url("../../assets/images/149-46.jpg");
   background-repeat: no-repeat;
-  height: 750px;
+  min-height: 250px;
+  max-height: 750px;
+  padding-bottom: 21px;
   background-position: 60%; }
 
 .rectangle {
@@ -2309,6 +2309,7 @@ footer {
   max-width: 480px;
   -ms-flex-direction: column;
       flex-direction: column;
+  text-decoration: none;
   background-color: rgba(255, 255, 255, 0.8);
   border: 4px solid rgba(255, 255, 255, 0); }
   .rectangle:hover {
@@ -2322,20 +2323,24 @@ footer {
   -ms-flex-align: center;
       align-items: center; }
 
-.new-member h2, .membership-renewal h2, .volunteer h2 {
-  font-family: montserrat, merriweather, sans-serif;
-  font-size: 16px;
-  width: 163px;
-  height: 58px;
-  margin: 0 auto;
-  text-align: center;
-  line-height: 29px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-pack: center;
-      justify-content: center;
-  -ms-flex-align: center;
-      align-items: center; }
+.new-member, .membership-renewal, .volunteer {
+  margin-top: 21px; }
+  .new-member h2, .membership-renewal h2, .volunteer h2 {
+    font-family: montserrat, merriweather, sans-serif;
+    font-size: 16px;
+    color: #000000;
+    text-decoration: none;
+    width: 163px;
+    height: 58px;
+    margin: 0 auto;
+    text-align: center;
+    line-height: 29px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: center;
+        justify-content: center;
+    -ms-flex-align: center;
+        align-items: center; }
 
 .page-template-join-us .rectangle p {
   display: none; }
