--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -70,3 +70,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "about";
 @import "programs";
 @import "join-us";
+@import "single-volunteer";
