--- a/themes/sgsc/sass/_variables.scss
+++ b/themes/sgsc/sass/_variables.scss
@@ -34,7 +34,7 @@ $font_m-h2: 16px;
 $font_m-body: 12px;
 //button
 $m_padding: .3rem 1.5rem;
-$d_padding: .4rem 3rem;
+$d_padding: 0rem 3rem;
 $p_border: 2px $black solid;
 //border
 $border_transparent: 4px transparent solid;
