made footer and join us and volunteer pages desktop view ready

--- a/themes/sgsc/sass/_single-volunteer.scss
+++ b/themes/sgsc/sass/_single-volunteer.scss
@@ -10,3 +10,29 @@
 .volunteer-content {
     font-size: $font_m-body;
 }
+
+
+@media all and (min-width: $desktop-view) {
+
+.volunteer-post {
+    margin: 20px 25px;
+}
+
+.volunteer-title {
+    font-size: $font_m-h2;
+    font-weight: 300;
+}
+
+.volunteer-header {
+    width: $d_width;
+    margin: auto;
+    column-count: 2;
+}
+
+.volunteer-content p {
+    column-count: 2;
+    column-width: 512px;
+    font-size: $font_d-sub-body;
+}
+
+}
