--- a/themes/sgsc/sass/_join-us.scss
+++ b/themes/sgsc/sass/_join-us.scss
@@ -79,69 +79,77 @@
 }
 
 
-// #post-18 {
-//     margin: 0;
-// }
+@media all and (min-width: $desktop-view) {
 
-// .entry-header {
-//     display: flex;
-//     justify-content: center;
-//     background: $orange;
-//     height: 160px;
-//     width: $d_width;
-//     margin: auto;
-// }
 
-// .entry-title {
-//     margin: auto;
-// }
+#post-18 {
+    margin: 0;
+}
 
-// .entry-content {
-//     margin: 0;
-// }
+.entry-title {
+    margin: auto;
+}
 
-// .join-us-section {
-//     display: flex;
-//     margin: 0 auto;
-//     justify-content: space-between;
-//     width: $d-width;
-//     background-image: url("../../assets/images/149-46.jpg");
-//     margin-bottom: 28px;
-//     background-size: 100%;
+.entry-header {
+    width: $d_width;
+}
+
+.entry-content {
+    margin: 0;
+}
+
+.join-us-section {
+    display: flex;
+    padding-bottom: initial;
+    margin: 0 auto;
+    justify-content: space-between;
+    width: $d-width;
+    background-image: url("../../assets/images/149-46.jpg");
+    margin-bottom: 28px;
+    max-width: none;
+    flex-direction: row;
+    background-size: 100%;
     
-// }
+}
 
-// .rectangle {
-//     height: 356px;
-//     box-sizing: border-box;
-//     width: 300px;
-//     background-color: rgba(255,255,255,0.8); 
-//     border: 4px solid rgba(255,255,255,0.0);
-//     &:hover {
-//         border: 4px solid $black;
-//     }
-// }
+.rectangle {
+    margin-top: initial;
+    
+    height: 356px;
+    box-sizing: border-box;
+    width: 300px;
+    background-color: rgba(255,255,255,0.8); 
+    border: 4px solid rgba(255,255,255,0.0);
+    &:hover {
+        border: 4px solid $black;
+    }
+}
 
+.new-member, .membership-renewal, .volunteer {
+        h2 {
+        font-family: $font__header;
+        font-size: $font_d-body;
+        width: 163px;
+        height: 58px;
+        margin: 38px auto 11px auto;
+        text-align: center;
+        padding-bottom: 11px;
+        line-height: 29px;
+        
+    }  
+    p {
+        font-family: $font__body;
+        font-size: $font_d-sub-body;
+        color: black;
+        width: 163px;
+        margin: auto;
+        margin-top: 11px;
+        line-height: 22px;
+    }
+}
 
+.page-template-join-us .rectangle p {
+    display: initial;
+}
 
-// .new-member, .membership-renewal, .volunteer {
-//         h2 {
-//         font-family: $font__header;
-//         font-size: $font_d-body;
-//         width: 163px;
-//         height: 58px;
-//         margin: auto;
-//         margin-top: 38px;   
-//         text-align: center;
-//         padding-bottom: 11px;
-//         line-height: 29px;
-//     }  
-//     p {
-//         font-family: $font__body;
-//         font-size: $font_d-sub-body;
-//         width: 163px;
-//         margin: auto;
-//         margin-top: 11px;
-//         line-height: 22px;
-//     }
-// }
+}
