--- a/themes/sgsc/style.css
+++ b/themes/sgsc/style.css
@@ -2101,6 +2101,7 @@ footer {
 
 .textwidget a {
   color: black;
+  font-weight: 300;
   text-decoration: none; }
 
 .textwidget :last-child {
@@ -2420,6 +2421,58 @@ footer {
 .page-template-join-us .rectangle p {
   display: none; }
 
+@media all and (min-width: 600px) {
+  #post-18 {
+    margin: 0; }
+  .entry-title {
+    margin: auto; }
+  .entry-header {
+    width: 1024px; }
+  .entry-content {
+    margin: 0; }
+  .join-us-section {
+    display: -ms-flexbox;
+    display: flex;
+    padding-bottom: initial;
+    margin: 0 auto;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    width: 1024px;
+    background-image: url("../../assets/images/149-46.jpg");
+    margin-bottom: 28px;
+    max-width: none;
+    -ms-flex-direction: row;
+        flex-direction: row;
+    background-size: 100%; }
+  .rectangle {
+    margin-top: initial;
+    height: 356px;
+    box-sizing: border-box;
+    width: 300px;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 4px solid rgba(255, 255, 255, 0); }
+    .rectangle:hover {
+      border: 4px solid #000000; }
+  .new-member h2, .membership-renewal h2, .volunteer h2 {
+    font-family: montserrat, merriweather, sans-serif;
+    font-size: 24px;
+    width: 163px;
+    height: 58px;
+    margin: 38px auto 11px auto;
+    text-align: center;
+    padding-bottom: 11px;
+    line-height: 29px; }
+  .new-member p, .membership-renewal p, .volunteer p {
+    font-family: lato, novecentosanswide, sans-serif;
+    font-size: 18px;
+    color: black;
+    width: 163px;
+    margin: auto;
+    margin-top: 11px;
+    line-height: 22px; }
+  .page-template-join-us .rectangle p {
+    display: initial; } }
+
 .volunteer-post {
   margin: 20px 25px; }
 
@@ -2429,3 +2482,18 @@ footer {
 
 .volunteer-content {
   font-size: 12px; }
+
+@media all and (min-width: 600px) {
+  .volunteer-post {
+    margin: 20px 25px; }
+  .volunteer-title {
+    font-size: 16px;
+    font-weight: 300; }
+  .volunteer-header {
+    width: 1024px;
+    margin: auto;
+    column-count: 2; }
+  .volunteer-content p {
+    column-count: 2;
+    column-width: 512px;
+    font-size: 18px; } }
