--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -71,3 +71,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "programs";
 @import "join-us";
 @import "single-volunteer";
+@import "donate";
