--- a/themes/sgsc/sass/style.scss
+++ b/themes/sgsc/sass/style.scss
@@ -72,3 +72,4 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "join-us";
 @import "single-volunteer";
 @import "donate";
+@import "contact-us";
