--- a/themes/sgsc/sass/_programs.scss
+++ b/themes/sgsc/sass/_programs.scss
@@ -3,6 +3,11 @@
   background-position: 95% -3%;
   background-size: 150%;
   background-repeat: no-repeat;
+  @media screen and (min-width: 480px) {
+    height: 22.25rem;
+    background-position: 51% 6%;
+    background-size: 100%;
+  }
 }
 
 .page-template-page-programs {
@@ -24,6 +29,11 @@
     font-size: 1.4rem;
     width: 9rem;
     text-align: center;
+    @media screen and (min-width: 480px) {
+      font-weight: 400;
+      font-size: 40px;
+      width: 100%;
+    }
   }
   h5 {
     font-family: $font__header;
@@ -91,6 +101,9 @@
 		color: black;
     text-decoration: none;
     font-size: 1.4rem;
+    @media screen and (min-width: 480px) {
+      font-size: 2.5rem;
+    }
 	}
 }
 
@@ -105,6 +118,7 @@
   align-items: center;
   height: 2.3rem;
   width: 2.3rem;
+  
   a {
     text-decoration: none;
     color: $black;
@@ -126,5 +140,8 @@
 }
 
 @media screen and (min-width: 480px) {
-
+  .page-template-page-programs .donate-btn {
+    height: 4.5rem;
+    width: 4.5rem;
+  }
 }
