add front-page scss involved border to pink

--- a/themes/sgsc/sass/_front-page.scss
+++ b/themes/sgsc/sass/_front-page.scss
@@ -239,7 +239,7 @@
               justify-content: space-around;
               align-items: center;
               width: 100%;
-              border: $p_border 4px $white;
+              border: $border $pink;
               @include hover-state {
                 border: $p_border 4px;
               }
